# codex-claude-author-critic-loop

./: IMPLEMENTATION_PROMPT.md  LICENSE  MANIFEST.in  PLAN.md  README.md  pylock.quality.toml  pyproject.toml
docs/: IMPLEMENTATION_STATUS.md
schemas/: critic-v1.schema.json  run-manifest-v1.schema.json  sandbox-protocol-v1.schema.json  subject-manifest-v1.schema.json  validation-evidence-v1.schema.json
src/agent_loop/: __init__.py  artifacts.py  author_service.py  capabilities.py  claude_client.py  claude_managed_policy.py  cli.py  codex_auth_status.py  codex_client.py  config.py  constants.py  credentials.py  declassify.py  diagnostic_patch.py  errors.py  filesystem.py  git_source.py  locks.py  manifests.py  models.py  preflight.py  progress.py  prompts.py  provenance.py  qualification.py  qualification_payloads.py  runner.py  runtime_adapters.py  sandbox.py  sandbox_init.py  schemas.py  service.py  state_machine.py  validation.py  validation_batch.py  workflow.py
support/author-service/: README.md  agent-loop-author.socket  agent-loop-author@.service  install.sh  uninstall.sh
support/managed-claude-boundary/: agent-loop-claude-boundary-attest.c  install.sh  managed-settings.json
tests/: conftest.py
tests/adversarial/: test_artifacts.py  test_declassify.py  test_filesystem.py  test_openat2.py  test_prompts.py
tests/fakes/: fake_claude.py  fake_codex.py  fake_workspace_agent.py  runner_harness.py
tests/host/: test_author_service.py  test_author_service_installer.py  test_limits.py  test_network_boundary.py  test_platform.py  test_preflight.py  test_process_isolation.py  test_sandbox.py  test_service.py  test_service_cleanup.py
tests/integration/: test_claude_client.py  test_codex_auth_status.py  test_codex_client.py  test_credentials.py  test_declassify.py  test_git_source.py  test_locks.py  test_manifest_policy.py  test_runner.py  test_runtime_adapters.py  test_sandbox_init.py  test_workflow.py
tests/real_cli/: live_support.py  test_claude_cli.py  test_codex_cli.py  test_live_claude_managed_boundary.py  test_live_codex_acceptance.py
tests/unit/: test_artifacts.py  test_author_service.py  test_capabilities.py  test_claude_managed_policy.py  test_cli.py  test_config.py  test_diagnostic_patch.py  test_errors.py  test_git_source.py  test_live_receipt_gate.py  test_manifests.py  test_policy.py  test_preflight.py  test_progress.py  test_prompts.py  test_provenance.py  test_qualification.py  test_sandbox.py  test_schema_documents.py  test_schemas.py  test_service.py  test_state_machine.py  test_validation.py  test_validation_batch.py  test_workflow.py
